@@ -27,10 +27,12 @@ import java.util.HashMap;
 import java.util.Map;
 
 import org.sosy_lab.cpachecker.util.invariants.interfaces.GeneralVariable;
+import org.sosy_lab.cpachecker.util.predicates.interfaces.BooleanFormula;
 import org.sosy_lab.cpachecker.util.predicates.interfaces.Formula;
-import org.sosy_lab.cpachecker.util.predicates.interfaces.FormulaManager;
+import org.sosy_lab.cpachecker.util.predicates.interfaces.FormulaType;
+import org.sosy_lab.cpachecker.util.predicates.interfaces.view.FormulaManagerView;
 
-public class TemplateVariable extends TemplateFormula implements GeneralVariable {
+public class TemplateVariable extends TemplateNumericValue implements BooleanFormula, GeneralVariable {
 
   private String name = null;
   private Integer index = null;
@@ -39,16 +41,19 @@ public class TemplateVariable extends TemplateFormula implements GeneralVariable
 
   private boolean writingAsForm = false;
 
-  public TemplateVariable(String name, int i) {
-    index = new Integer(i);
+  public TemplateVariable(FormulaType<?> type, String name, int i) {
+    super(type);
+    index = Integer.valueOf(i);
     build(name, index);
   }
 
-  public TemplateVariable(String name) {
+  public TemplateVariable(FormulaType<?> type, String name) {
+    super(type);
     build(name, null);
   }
 
-  public TemplateVariable(String name, Integer index) {
+  public TemplateVariable(FormulaType<?> type, String name, Integer index) {
+    super(type);
     build(name, index);
   }
 
@@ -63,17 +68,17 @@ public class TemplateVariable extends TemplateFormula implements GeneralVariable
    * @param vn
    * @return
    */
-  public static TemplateVariable parse(String vn) {
+  public static TemplateVariable parse(FormulaType<?> type, String vn) {
     TemplateVariable V;
     int i = vn.lastIndexOf("@");
     if (i < 0) {
-      V = new TemplateVariable(vn);
+      V = new TemplateVariable(type, vn);
     } else {
-      String s = vn.substring(0,i);
+      String s = vn.substring(0, i);
       String ind = vn.substring(i+1);
-      Integer I = new Integer(ind);
+      Integer I = Integer.valueOf(ind);
       int j = I.intValue();
-      V = new TemplateVariable(s,j);
+      V = new TemplateVariable(type, s, j);
     }
     return V;
   }
@@ -97,7 +102,7 @@ public class TemplateVariable extends TemplateFormula implements GeneralVariable
   }
 
   @Override
-  public void postindex(Map<String,Integer> indices) {
+  public void postindex(Map<String, Integer> indices) {
     if (name!=null && indices.containsKey(name)) {
       index = indices.get(name);
     } else {
@@ -106,9 +111,9 @@ public class TemplateVariable extends TemplateFormula implements GeneralVariable
   }
 
   @Override
-  public void preindex(Map<String,Integer> indices) {
+  public void preindex(Map<String, Integer> indices) {
     if (name!=null && indices.containsKey(name)) {
-      index = new Integer(1);
+      index = Integer.valueOf(1);
     } else {
       index = null;
     }
@@ -124,15 +129,15 @@ public class TemplateVariable extends TemplateFormula implements GeneralVariable
   }
 
   @Override
-  public HashMap<String,Integer> getMaxIndices(HashMap<String,Integer> map) {
+  public HashMap<String, Integer> getMaxIndices(HashMap<String, Integer> map) {
     if (name!=null && index!=null) {
       if (map.containsKey(name)) {
         Integer J = map.get(name);
         if (index.compareTo(J) > 0) {
-          map.put(name,index);
+          map.put(name, index);
         }
       } else {
-        map.put(name,index);
+        map.put(name, index);
       }
     }
     return map;
@@ -141,7 +146,7 @@ public class TemplateVariable extends TemplateFormula implements GeneralVariable
   public boolean equals(TemplateVariable v) {
     // Call these variables equal if they produce the same
     // string.
-    return ( toString().equals( v.toString() ) );
+    return ( toString().equals(v.toString() ));
   }
 
   public String getName() {
@@ -157,23 +162,29 @@ public class TemplateVariable extends TemplateFormula implements GeneralVariable
   }
 
   @Override
-  public Formula translate(FormulaManager fmgr) {
-  	Formula form = null;
-  	if (hasIndex()) {
-  		form = fmgr.makeVariable(name, index);
-  	} else {
-  		form = fmgr.makeVariable(name);
-  	}
-  	return form;
+  public Formula translate(FormulaManagerView fmgr) {
+    Formula form = null;
+    if (hasIndex()) {
+      form = fmgr.makeVariable(getFormulaType(), name, index);
+    } else {
+      form = fmgr.makeVariable(getFormulaType(), name);
+    }
+    return form;
   }
 
   @Override
   public TemplateVariable copy() {
+    return withFormulaType(getFormulaType());
+  }
+
+  @Override
+  public TemplateVariable withFormulaType(FormulaType<?> pNewType) {
+
     TemplateVariable v = null;
     if (index == null) {
-      v = new TemplateVariable(new String(name));
+      v = new TemplateVariable(pNewType, name);
     } else {
-      v = new TemplateVariable(new String(name), new Integer(index));
+      v = new TemplateVariable(pNewType, name, Integer.valueOf(index));
     }
     return v;
   }
@@ -219,5 +230,6 @@ public class TemplateVariable extends TemplateFormula implements GeneralVariable
     }
     return s;
   }
+
 
 }
